# chatgpt-voice-assistant

./: .coveragerc  .dockerignore  .flake8  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  main.py  pylintrc  pyproject.toml  pytest.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md  other.md
.github/workflows/: python-app.yml  set-status.yml  test-application.yml
chatgpt_voice_assistant/: cli_parser.py  command_line_parser.py  computer_voice_responder.py  conversation.py  input_devices.py  main.py  open_ai_text_generator.py  speech_listener.py  whisper_listener.py
chatgpt_voice_assistant/bases/: listener.py  options_parser.py  responder.py  text_generator.py  text_to_speech_client.py
chatgpt_voice_assistant/clients/: apple_say_text_to_speech_client.py  google_text_to_speech_client.py  open_ai_client.py  openai_text_to_speech_client.py
chatgpt_voice_assistant/exceptions/: failed_to_understand_listener_error.py  invalid_input_device_index_error.py  listener_error.py  listener_fatal_error.py  no_input_devices_found_error.py  no_input_listener_error.py  respond_error.py  text_generation_error.py
chatgpt_voice_assistant/helpers/: get_input_device_from_user.py  set_keyboard_interrupt_handler.py  set_log_level.py
chatgpt_voice_assistant/models/: command_line_arguments.py  exchange.py  input_device.py  message.py  open_ai_chat_completion.py  pyaudio_device_info.py
gpt3_assistant/: command_line_parser.py  computer_voice.py  computer_voice_responder.py  conversation.py  input_device.py  input_devices.py  main.py  open_ai_client.py  open_ai_text_generator.py  speech_listener.py
gpt3_assistant/bases/: listener.py  responder.py  text_generator.py  text_to_speech_client.py
gpt3_assistant/clients/: google_text_to_speech_client.py  open_ai_client.py
gpt3_assistant/exceptions/: CouldNotUnderstandSpeechError.py  SpeechRecognitionRequestError.py  __init__.py  could_not_understand_speech_error.py  failed_to_understand_listener_error.py  listener_error.py  listener_fatal_error.py  no_input_listener_error.py  respond_error.py  speech_recognition_error.py  speech_recognition_request_error.py  text_generation_error.py
gpt3_assistant/helpers/: get_input_device_from_user.py  set_keyboard_interrupt_handler.py  set_log_level.py
gpt3_assistant/models/: command_line_arguments.py  exchange.py  input_device.py  pyaudio_device_info.py
tests/: test_command_line_parser.py  test_computer_voice.py  test_computer_voice_responder.py  test_conversation.py  test_exchange.py  test_input_devices.py  test_open_ai_client.py  test_open_ai_text_generator.py  test_speech_listener.py
tests/clients/: test_apple_say_text_to_speech_client.py  test_google_text_to_speech_client.py  test_open_ai_client.py
tests/models/: test_exchange.py  test_message.py
