[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chatgpt_voice_assistant"
description = "Package to speak with OpenAI's GPT models"
version = "1.3.0"
authors = ["Jake Cyr <cyrjake@gmail.com>"]
readme = "README.md"
packages = [{ include = "chatgpt_voice_assistant" }]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
openai = "^1.30.2"
speechrecognition = "3.10.1"
pyaudio = ">=0.2.13, <0.3"
gtts = ">=2.3.1, <3.0"

[tool.poetry.scripts]
gptassist = "chatgpt_voice_assistant.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mock = "^5.1.0"
coverage = "^7.3.3"
mypy = "^1.10.0"
types-pyaudio = "^0.2.16.7"
types-mock = "^5.1.0.3"
ruff = "^0.4.5"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
